<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoutingApp</string>
    <string name="welcome_message">Welcome to the ScoutingApp!</string>
    <string name="choose_your_favorite_team">Please choose your favorite team:</string>
    <string name="your_favorite_team_is">Favorite Team: {0}</string>
    <string name="to_continue_message">To continue, please choose a team from the menu.</string>
    <string name="please_connect_to_internet_message">Welcome to the ScoutingApp!\n\nThis app requires Internet connectivity.\n\nPlease ensure that you are connected to the Internet.</string>
    <string name="error_message">Error!</string>
    <string name="please_wait_message">Please Wait.</string>
    <string name="please_wait_loading_players">Please Wait.\nLoading Players.</string>
    <string name="please_wait_loading_comments">Please Wait.\nLoading Comments.</string>
    <string name="please_wait_posting_comment">Please Wait.\nPosting Comment.</string>
    <string name="please_wait_deleting_comment">Please Wait.\nDeleting Comment.</string>
    <string name="please_wait_flagging_comment">Please Wait.\nFlagging Comment.</string>
    <string name="please_wait_loading_flagged_comments">Please Wait.\nLoading flagged comments.</string>
    <string name="please_wait_ignoring_flags">Please Wait.\nIgnoring Flags.</string>
    <string name="please_wait_loading_top_users">Please Wait.\nLoading top users.</string>
    <string name="please_wait_loading_all_teams_comments">Please Wait.\nLoading all teams\' comments.</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_signed_out">Signed out</string>
    <string name="play_services_error">Google Play services is not available.\nYou will not be able to post comments.</string>
    <string name="close">Close</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="status_signing_in">Signing in with Google+...</string>
    <string name="comment_length">140</string>
    <string name="comment_length_warning">Comments cannot exceed 140 characters.</string>
    <string name="failure_to_load_message">Failed to load. Please ensure that you are connected to the Internet.</string>
    <string name="failure_to_post_comment">Failed to post comment. Please ensure that you are connected to the Internet.</string>
    <string name="failure_to_delete_comment">Failed to delete comment. Please ensure that you are connected to the Internet.</string>
    <string name="failure_to_ignore_comments">Failed to ignore comments. Please ensure that you are connected to the Internet.</string>
    <string name="failed_to_resolve_connection_failure">Failed to resolve connection failure.</string>
    <string name="failed_to_obtain_auth_token">Failed to obtain an authorization token.\nPlease ensure that you are connected to the Internet.</string>
    <string name="clear_button_text">Clear</string>
    <string name="submit_button_text">Submit</string>
    <string name="cancel_edit_button_text">Cancel</string>
    <string name="edit_button_text">Edit</string>
    <string name="please_sign_in">Please sign in to Google+ to leave a comment.</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="comments_action_bar_title">Comments</string>
    <string name="reports_action_bar_title">Reports</string>
    <string name="flagged_comments_title_text">Flagged Comments</string>
    <string name="top_users_report_title_text">Top Users (by Comments)</string>
    <string name="currently_no_comments_title_text">There are currently no comments.</string>
    <string name="top_users_report_number_of_users">20</string>
    <string name="all_teams_title_text">All Teams</string>

</resources>
