<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jimg.scoutingapp.MainActivity"
    tools:ignore="MergeRootFrame">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip">
        <LinearLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">
            <TextView
                android:text="@string/welcome_message"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_message_text_view" />
            <TextView
                android:id="@+id/choose_your_favorite_team_text_view"
                android:text="@string/choose_your_favorite_team"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>
            <Spinner
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favorite_team_spinner" />
            <Button
                android:id="@+id/submit_favorite_team_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button_text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/favorite_team_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">
            <TextView
                android:id="@+id/your_favorite_team_is_text_view"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/edit_favorite_team_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginRight="2dip"
                    android:enabled="false" />
                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out_button_name"
                    android:layout_marginRight="2dip"
                    android:enabled="false" />
                <Button
                    android:id="@+id/revoke_access_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revoke_access_button_name"
                    android:enabled="false" />
            </LinearLayout>
            <TextView
                android:id="@+id/sign_in_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/status_signed_out" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>